# dd-clip-miner-llm

./: .gitignore  LICENSE  README.md  config.daily-summary.example.yaml  config.deepseek.example.yaml  config.example.yaml  install.py  install.yaml  pyproject.toml  rename_drag_drop.bat  requirements-cu12.txt  requirements-dev.txt  requirements.txt  setup.py  setup_env.py  streamer_dictionary.example.json
.github/workflows/: tests.yml
dd_clip_miner_llm/: asr.py  batch.py  cli.py  clip_naming.py  config.py  ffmpeg.py  llm.py  llm_debug.py  manual.py  merger.py  models.py  paths.py  pipeline.py  profile_state.py  report.py  search_tools.py  song_adaptive.py  song_adaptive_cost.py  song_evaluation.py  song_postprocess.py
dd_clip_miner_llm/asr_backends/: __init__.py  base.py  faster_whisper.py  funasr_backend.py  mimo_asr_backend.py
dd_clip_miner_llm/concat/: __init__.py  health.py  helpers.py  models.py  pipeline.py  planner.py  probe.py  runner.py  strategies.py
dd_clip_miner_llm/ffmpeg/: __init__.py  bitstream.py  command.py  compat.py  concat_ops.py  diagnosis.py  encode.py  errors.py  fsutil.py  legacy.py  media.py  mkvmerge.py  probe.py  single_input.py  validation.py
dd_clip_miner_llm/recognizers/: __init__.py  base.py  cringe.py  daily_summary.py  dialogue.py  funny.py  highlight.py  song.py
dd_clip_miner_llm/song_postprocess/: __init__.py  normalize.py  pipeline.py  recheck.py  review.py  risk.py  temporal.py  v3.py
scripts/: adaptive_cost_probe.py  evaluate_song_pipeline_v2.py  fix_garbled_clip_names.py  probe_concat_strategies.ps1  rename_drag_drop.py  review_scope_ab.py
tests/: __init__.py  conftest.py  test_basic.py  test_smoke.py  test_song_v3.py
